--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -55,7 +55,7 @@
     "@production(m, Y, 0, 1, [Output(PY, 50)], [Input(PL, 20), Input(PK, 30)])\n",
     "@production(m, U, 0, 1, [Output(PU, 150)], [Input(PX, 100), Input(PY, 50)])\n",
     "\n",
-    "@demand(m, RA, [Demand(PU, 1)], [Endowment(PL, :(70 * $endow)), Endowment(PK, 80.)])"
+    "@demand(m, RA, [Demand(PU, 150)], [Endowment(PL, :(70 * $endow)), Endowment(PK, 80.)])"
    ]
   },
   {
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_E0BC.tmp\n",
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_5A57.tmp\n",
       " > cumulative_iteration_limit 0\n",
       "Read of options file complete.\n",
       "\n",
@@ -83,7 +83,7 @@
       "\n",
       "Major Iteration Log\n",
       "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
-      "    0     0     1     1 1.4900e+02           I 0.0e+00 1.5e+02 (F_PUρRA)\n",
+      "    0     0     1     1 0.0000e+00           I 0.0e+00 0.0e+00 (F_X)\n",
       "\n",
       "Major Iterations. . . . 0\n",
       "Minor Iterations. . . . 0\n",
@@ -93,8 +93,14 @@
       "Function Evaluations. . 1\n",
       "Gradient Evaluations. . 1\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.062000\n",
-      "Residual. . . . . . . . 1.490033e+02\n"
+      "Total Time. . . . . . . 0.079000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual. . . . . . . . 0.000000e+00\n"
      ]
     },
     {
@@ -104,7 +110,26 @@
        "  Sectors: X (bm=1.0), Y (bm=1.0), U (bm=1.0)\n",
        "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
        "  Consumers: RA (bm=150.0)\n",
-       "Did not solve with error: CumulativeMinorIterationLimit.\n"
+       "Solution:\n",
+       "  X:\t1.0\n",
+       "  Y:\t1.0\n",
+       "  U:\t1.0\n",
+       "  PX:\t1.0\n",
+       "  PY:\t1.0\n",
+       "  PU:\t1.0\n",
+       "  PL:\t1.0\n",
+       "  PK:\t1.0\n",
+       "  PX‡X:\t100.0\n",
+       "  PY‡Y:\t50.0\n",
+       "  PU‡U:\t150.0\n",
+       "  PL†X:\t50.0\n",
+       "  PK†X:\t50.0\n",
+       "  PL†Y:\t20.0\n",
+       "  PK†Y:\t30.0\n",
+       "  PX†U:\t100.0\n",
+       "  PY†U:\t50.0\n",
+       "  RA:\t150.0\n",
+       "  PUρRA:\t150.0\n"
       ]
      },
      "metadata": {},
@@ -136,7 +161,7 @@
       "\n",
       "Crash Log\n",
       "major  func  diff  size  residual    step       prox   (label)\n",
-      "    0     0             1.4916e+02             0.0e+00 (F_PUρRA)\n",
+      "    0     0             6.8995e+00             0.0e+00 (F_RA)\n",
       "    1     1     0    19 5.6719e-01  1.0e+00    0.0e+00 (F_PUρRA)\n",
       "pn_search terminated: no basis change.\n",
       "\n",
@@ -154,7 +179,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.000000\n",
+      "Total Time. . . . . . . 0.047000\n",
       "Residual. . . . . . . . 1.927322e-08\n"
      ]
     },
@@ -218,7 +243,7 @@
       "\n",
       "Crash Log\n",
       "major  func  diff  size  residual    step       prox   (label)\n",
-      "    0     0             1.4916e+02             0.0e+00 (F_PUρRA)\n",
+      "    0     0             6.8995e+00             0.0e+00 (F_RA)\n",
       "    1     1     0    18 4.0468e-01  1.0e+00    0.0e+00 (F_X)\n",
       "pn_search terminated: no basis change.\n",
       "\n",
@@ -236,7 +261,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.015000\n",
+      "Total Time. . . . . . . 0.000000\n",
       "Residual. . . . . . . . 1.897697e-09\n",
       "Postsolved residual: 1.8977e-09\n"
      ]
@@ -307,17 +332,17 @@
        "& \\quad (50.0 * PY) / sqrt(+((50.0 * PY ^ {2.0}) / +50.0)) - PY‡Y\\quad && \\perp \\quad && PY‡Y\\\\\n",
        "& \\quad (150.0 * PU) / sqrt(+((150.0 * PU ^ {2.0}) / +150.0)) - PU‡U\\quad && \\perp \\quad && PU‡U\\\\\n",
        "& \\text{Final Demand} \\quad && \\quad && \\\\\n",
-       "& \\quad ((1.0 / +1.0) * RA) / PU - PUρRA\\quad && \\perp \\quad && PUρRA\\\\\n",
+       "& \\quad ((150.0 / +150.0) * RA) / PU - PUρRA\\quad && \\perp \\quad && PUρRA\\\\\n",
        "& \\text{Zero Profit} \\quad && \\quad && \\\\\n",
        "& \\quad (PL * PL†X + PK * PK†X) - +(PX * PX‡X)\\quad && \\perp \\quad && 0.0 <X\\\\\n",
        "& \\quad (PL * PL†Y + PK * PK†Y) - +(PY * PY‡Y)\\quad && \\perp \\quad && 0.0 <Y\\\\\n",
        "& \\quad (PX * PX†U + PY * PY†U) - +(PU * PU‡U)\\quad && \\perp \\quad && 0.0 <U\\\\\n",
        "& \\text{Market clearance} \\quad && \\quad && \\\\\n",
        "& \\quad (0.0 + 70.0 * endow) - (0.0 + X * PL†X + Y * PL†Y)\\quad && \\perp \\quad && 0.001 <PL\\\\\n",
-       "& \\quad (0.0 + 80.0) - (0.0 + X * PK†X + Y * PK†Y)\\quad && \\perp \\quad && 0.001 <PK\\\\\n",
-       "& \\quad (0.0 + Y * PY‡Y) - (0.0 + U * PY†U)\\quad && \\perp \\quad && 0.001 <PY\\\\\n",
-       "& \\quad (0.0 + U * PU‡U) - (0.0 + PUρRA)\\quad && \\perp \\quad && 0.001 <PU\\\\\n",
        "& \\quad (0.0 + X * PX‡X) - (0.0 + U * PX†U)\\quad && \\perp \\quad && PX = 1.0\\\\\n",
+       "& \\quad (0.0 + U * PU‡U) - (0.0 + PUρRA)\\quad && \\perp \\quad && 0.001 <PU\\\\\n",
+       "& \\quad (0.0 + Y * PY‡Y) - (0.0 + U * PY†U)\\quad && \\perp \\quad && 0.001 <PY\\\\\n",
+       "& \\quad (0.0 + 80.0) - (0.0 + X * PK†X + Y * PK†Y)\\quad && \\perp \\quad && 0.001 <PK\\\\\n",
        "& \\text{Income balance} \\quad && \\quad && \\\\\n",
        "& \\quad ((70.0 * endow) * PL + 80.0 * PK) - RA\\quad && \\perp \\quad && 0.0 <RA\\\\\n",
        "\\end{alignat*}\n",
@@ -325,31 +350,31 @@
       ],
       "text/plain": [
        "Mixed complementarity problem with 19 constraints:\n",
-       "Compensated Demand\n",
-       "  50.0 * ((PL ^ (50.0 / (50.0 + 50.0)) * PK ^ (50.0 / (50.0 + 50.0))) / PL) ^ 1.0 - PL†X      ┴  PL†X\n",
-       "  50.0 * ((PL ^ (50.0 / (50.0 + 50.0)) * PK ^ (50.0 / (50.0 + 50.0))) / PK) ^ 1.0 - PK†X      ┴  PK†X\n",
-       "  20.0 * ((PL ^ (20.0 / (20.0 + 30.0)) * PK ^ (30.0 / (20.0 + 30.0))) / PL) ^ 1.0 - PL†Y      ┴  PL†Y\n",
-       "  30.0 * ((PL ^ (20.0 / (20.0 + 30.0)) * PK ^ (30.0 / (20.0 + 30.0))) / PK) ^ 1.0 - PK†Y      ┴  PK†Y\n",
-       "  100.0 * ((PX ^ (100.0 / (100.0 + 50.0)) * PY ^ (50.0 / (100.0 + 50.0))) / PX) ^ 1.0 - PX†U  ┴  PX†U\n",
-       "  50.0 * ((PX ^ (100.0 / (100.0 + 50.0)) * PY ^ (50.0 / (100.0 + 50.0))) / PY) ^ 1.0 - PY†U   ┴  PY†U\n",
-       "Compensated Supply\n",
-       "  (100.0 * PX) / sqrt(+((100.0 * PX ^ 2.0) / +100.0)) - PX‡X                                  ┴  PX‡X\n",
-       "  (50.0 * PY) / sqrt(+((50.0 * PY ^ 2.0) / +50.0)) - PY‡Y                                     ┴  PY‡Y\n",
-       "  (150.0 * PU) / sqrt(+((150.0 * PU ^ 2.0) / +150.0)) - PU‡U                                  ┴  PU‡U\n",
-       "Final Demand\n",
-       "  ((1.0 / +1.0) * RA) / PU - PUρRA                                                            ┴  PUρRA\n",
-       "Zero Profit\n",
-       "  (PL * PL†X + PK * PK†X) - +(PX * PX‡X)                                                      ┴  0.0 < X\n",
-       "  (PL * PL†Y + PK * PK†Y) - +(PY * PY‡Y)                                                      ┴  0.0 < Y\n",
-       "  (PX * PX†U + PY * PY†U) - +(PU * PU‡U)                                                      ┴  0.0 < U\n",
-       "Market clearance\n",
-       "  (0.0 + 70.0 * endow) - (0.0 + X * PL†X + Y * PL†Y)                                          ┴  0.001 < PL\n",
-       "  (0.0 + 80.0) - (0.0 + X * PK†X + Y * PK†Y)                                                  ┴  0.001 < PK\n",
-       "  (0.0 + Y * PY‡Y) - (0.0 + U * PY†U)                                                         ┴  0.001 < PY\n",
-       "  (0.0 + U * PU‡U) - (0.0 + PUρRA)                                                            ┴  0.001 < PU\n",
-       "  (0.0 + X * PX‡X) - (0.0 + U * PX†U)                                                         ┴  PX = 1.0\n",
-       "Income balance\n",
-       "  ((70.0 * endow) * PL + 80.0 * PK) - RA                                                      ┴  0.0 < RA\n"
+       "  Compensated Demand\n",
+       "    50.0 * ((PL ^ (50.0 / (50.0 + 50.0)) * PK ^ (50.0 / (50.0 + 50.0))) / PL) ^ 1.0 - PL†X      ┴  PL†X\n",
+       "    50.0 * ((PL ^ (50.0 / (50.0 + 50.0)) * PK ^ (50.0 / (50.0 + 50.0))) / PK) ^ 1.0 - PK†X      ┴  PK†X\n",
+       "    20.0 * ((PL ^ (20.0 / (20.0 + 30.0)) * PK ^ (30.0 / (20.0 + 30.0))) / PL) ^ 1.0 - PL†Y      ┴  PL†Y\n",
+       "    30.0 * ((PL ^ (20.0 / (20.0 + 30.0)) * PK ^ (30.0 / (20.0 + 30.0))) / PK) ^ 1.0 - PK†Y      ┴  PK†Y\n",
+       "    100.0 * ((PX ^ (100.0 / (100.0 + 50.0)) * PY ^ (50.0 / (100.0 + 50.0))) / PX) ^ 1.0 - PX†U  ┴  PX†U\n",
+       "    50.0 * ((PX ^ (100.0 / (100.0 + 50.0)) * PY ^ (50.0 / (100.0 + 50.0))) / PY) ^ 1.0 - PY†U   ┴  PY†U\n",
+       "  Compensated Supply\n",
+       "    (100.0 * PX) / sqrt(+((100.0 * PX ^ 2.0) / +100.0)) - PX‡X                                  ┴  PX‡X\n",
+       "    (50.0 * PY) / sqrt(+((50.0 * PY ^ 2.0) / +50.0)) - PY‡Y                                     ┴  PY‡Y\n",
+       "    (150.0 * PU) / sqrt(+((150.0 * PU ^ 2.0) / +150.0)) - PU‡U                                  ┴  PU‡U\n",
+       "  Final Demand\n",
+       "    ((150.0 / +150.0) * RA) / PU - PUρRA                                                        ┴  PUρRA\n",
+       "  Zero Profit\n",
+       "    (PL * PL†X + PK * PK†X) - +(PX * PX‡X)                                                      ┴  0.0 < X\n",
+       "    (PL * PL†Y + PK * PK†Y) - +(PY * PY‡Y)                                                      ┴  0.0 < Y\n",
+       "    (PX * PX†U + PY * PY†U) - +(PU * PU‡U)                                                      ┴  0.0 < U\n",
+       "  Market clearance\n",
+       "    (0.0 + 70.0 * endow) - (0.0 + X * PL†X + Y * PL†Y)                                          ┴  0.001 < PL\n",
+       "    (0.0 + X * PX‡X) - (0.0 + U * PX†U)                                                         ┴  PX = 1.0\n",
+       "    (0.0 + U * PU‡U) - (0.0 + PUρRA)                                                            ┴  0.001 < PU\n",
+       "    (0.0 + Y * PY‡Y) - (0.0 + U * PY†U)                                                         ┴  0.001 < PY\n",
+       "    (0.0 + 80.0) - (0.0 + X * PK†X + Y * PK†Y)                                                  ┴  0.001 < PK\n",
+       "  Income balance\n",
+       "    ((70.0 * endow) * PL + 80.0 * PK) - RA                                                      ┴  0.0 < RA\n"
       ]
      },
      "metadata": {},
@@ -363,7 +388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -371,7 +396,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.7.3"
   },
   "nteract": {
    "version": "0.28.0"
