add cons benchmarks back to examples

--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -49,7 +49,7 @@
     "@commodity(m, PL)\n",
     "@commodity(m, PK)\n",
     "\n",
-    "@consumer(m, RA)\n",
+    "@consumer(m, RA, benchmark = 150.)\n",
     "\n",
     "@production(m, X, 0, 1, [Output(PX, 100)], [Input(PL, 50), Input(PK, 50)])\n",
     "@production(m, Y, 0, 1, [Output(PY, 50)], [Input(PL, 20), Input(PK, 30)])\n",
