--- a/examples/NewParamTest.ipynb
+++ b/examples/NewParamTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,13 +239,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.031000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Total Time. . . . . . . 0.000000\n",
       "Residual. . . . . . . . 1.298647e-07\n",
       "Postsolved residual: 1.2986e-07\n"
      ]
@@ -286,7 +280,6 @@
    "source": [
     "set_value(diff, 10.0)\n",
     "set_fixed!(RA, true)\n",
-    "# set_value(endow, 1.1)\n",
     "solve!(m)"
    ]
   },
@@ -303,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is from updating diff = 10 and set_fixed(RA, true)"
+    "This is MPSGE.jl from updating diff = 10 and set_fixed(RA, true), ~ match to GAMS"
    ]
   },
   {
@@ -332,6 +325,192 @@
     "var\" RA\" = 150 ;\n",
     "var\"PUρRA\" = 159.840335515262 ;\n",
     "var\"diff\" = 10 ;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GAMS for diff=10, RA.FX = 150, SAME as no RA.FX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var\"X\" = 1 ;\n",
+    "var\"Y\" = 1 ;\n",
+    "var\"U\" = 1.06560224 ;\n",
+    "var\"PX\" = 0.90909091 ;\n",
+    "var\"PY\" = 1 ;\n",
+    "var\"PU\" = 0.93843647 ;\n",
+    "var\"PL\" = 1 ;\n",
+    "var\"PK\" = 1 ;\n",
+    "var\"PX‡X\" = 110 ;\n",
+    "var\"PY‡Y\" = 50 ;\n",
+    "var\"PU‡U\" = 150 ;\n",
+    "var\"PL†X\" = 50 ;\n",
+    "var\"PK†X\" = 50 ;\n",
+    "var\"PL†Y\" = 20 ;\n",
+    "var\"PK†Y\" = 30 ;\n",
+    "var\"PX†U\" = 103.228 ;\n",
+    "var\"PY†U\" = 46.92182343 ;\n",
+    "var\" RA\" = 150 ;\n",
+    "var\"PUρRA\" = 159.8403 ;\n",
+    "var\"diff\" = 10 ;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
+      "Preprocessed size   : 18\n",
+      "\n",
+      "Crash Log\n",
+      "major  func  diff  size  residual    step       prox   (label)\n",
+      "    0     0             2.0339e+01             0.0e+00 (F_X)\n",
+      "    1     1     0    18 1.1343e+00  1.0e+00    0.0e+00 (F_PUρRA)\n",
+      "pn_search terminated: no basis change.\n",
+      "\n",
+      "Major Iteration Log\n",
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
+      "    0     0     2     2 1.1343e+00           I 0.0e+00 7.5e-01 (F_PUρRA)\n",
+      "    1     1     3     3 7.5344e-03  1.0e+00 SO 0.0e+00 7.1e-03 (F_PUρRA)\n",
+      "    2     1     4     4 3.2388e-07  1.0e+00 SO 0.0e+00 3.1e-07 (F_PUρRA)\n",
+      "\n",
+      "Major Iterations. . . . 2\n",
+      "Minor Iterations. . . . 2\n",
+      "Restarts. . . . . . . . 0\n",
+      "Crash Iterations. . . . 1\n",
+      "Gradient Steps. . . . . 0\n",
+      "Function Evaluations. . 4\n",
+      "Gradient Evaluations. . 4\n",
+      "Basis Time. . . . . . . 0.000000\n",
+      "Total Time. . . . . . . 0.062000\n",
+      "Residual. . . . . . . . 3.238794e-07\n",
+      "Postsolved residual: 3.2388e-07\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MPSGE model with 3 sectors, 5 commodities and 1 consumers.\n",
+       "  Sectors: X (bm=1.0), Y (bm=1.0), U (bm=1.0)\n",
+       "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
+       "  Consumers: RA (bm=150.0)\n",
+       "Solution:\n",
+       "  X:\t1.0490471384748339\n",
+       "  Y:\t1.038860117925871\n",
+       "  U:\t1.1140833642577646\n",
+       "  PX:\t0.9072153620826622\n",
+       "  PY:\t1.0075145309934235\n",
+       "  PU:\t0.9394868447662132\n",
+       "  PL:\t0.9515151488881527\n",
+       "  PK:\t1.0466666656603176\n",
+       "  PX‡X:\t109.97728483613315\n",
+       "  PY‡Y:\t50.00000001746365\n",
+       "  PU‡U:\t150.00000000072828\n",
+       "  PL†X:\t52.4285306016761\n",
+       "  PK†X:\t47.662300541097125\n",
+       "  PL†Y:\t21.177057063675093\n",
+       "  PK†Y:\t28.87780509173232\n",
+       "  PX†U:\t103.55720196011843\n",
+       "  PY†U:\t46.62398486772982\n",
+       "  RA:\t157.0\n",
+       "  PUρRA:\t167.112504639448\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "set_value(diff, 10.0)\n",
+    "set_value(endow, 1.1)\n",
+    "set_fixed!(RA, true)\n",
+    "solve!(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set_value(diff, 10.0)\n",
+    "set_value(endow, 1.1)\n",
+    "set_fixed!(RA, true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var\"X\" = 1.04904713847483 ;\n",
+    "var\"Y\" = 1.03886011792587 ;\n",
+    "var\"U\" = 1.11408336425776 ;\n",
+    "var\"PX\" = 0.907215362082662 ;\n",
+    "var\"PY\" = 1.00751453099342 ;\n",
+    "var\"PU\" = 0.939486844766213 ;\n",
+    "var\"PL\" = 0.951515148888152 ;\n",
+    "var\"PK\" = 1.04666666566031 ;\n",
+    "var\"PX‡X\" = 109.977284836133 ;\n",
+    "var\"PY‡Y\" = 50.0000000174636 ;\n",
+    "var\"PU‡U\" = 150.000000000728 ;\n",
+    "var\"PL†X\" = 52.4285306016761 ;\n",
+    "var\"PK†X\" = 47.6623005410971 ;\n",
+    "var\"PL†Y\" = 21.177057063675 ;\n",
+    "var\"PK†Y\" = 28.8778050917323 ;\n",
+    "var\"PX†U\" = 103.557201960118 ;\n",
+    "var\"PY†U\" = 46.6239848677298 ;\n",
+    "var\" RA\" = 157 ;\n",
+    "var\"PUρRA\" = 167.112504639448 ;\n",
+    "var\"diff\" = 10 ;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GAMS diff=10, endow=1.1, RA.FX=80+70*1.1 SAME as NO RA.FX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var\"X\" = 1.04880885 ;\n",
+    "var\"Y\" = 1.03886012 ;\n",
+    "var\"U\" = 1.11406803 ;\n",
+    "var\"PX\" = 0.9072341 ;\n",
+    "var\"PY\" = 1.00751453 ;\n",
+    "var\"PU\" = 0.93949978 ;\n",
+    "var\"PL\" = 0.95151515 ;\n",
+    "var\"PK\" = 1.04666667 ;\n",
+    "var\"PX‡X\" = 110 ;\n",
+    "var\"PY‡Y\" = 50 ;\n",
+    "var\"PU‡U\" = 150 ;\n",
+    "var\"PL†X\" = 52.44044241 ;\n",
+    "var\"PK†X\" = 47.67312946 ;\n",
+    "var\"PL†Y\" = 21.17705706 ;\n",
+    "var\"PK†Y\" = 28.87780508 ;\n",
+    "var\"PX†U\" = 103.5565 ;\n",
+    "var\"PY†U\" = 46.6246268 ;\n",
+    "var\" RA\" = 157 ;\n",
+    "var\"PUρRA\" = 167.1102 ;\n",
+    "# var\"diff\" = 10 ;\n",
+    "var\"diff\" = 0 ;"
    ]
   },
   {
@@ -401,6 +580,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "set_value(diff, 10.0)\n",
+    "set_value(endow, 1.1)\n",
+    "set_fixed!(RA, false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var\"X\" = 1.03523426518343 ;\n",
+    "var\"Y\" = 1.03886011829416 ;\n",
+    "var\"U\" = 1.11318877431167 ;\n",
+    "var\"PX\" = 1.02338957692563 ;\n",
+    "var\"PY\" = 1.1351639913029 ;\n",
+    "var\"PU\" = 1.05936802743385 ;\n",
+    "var\"PL\" = 1.07206963405921 ;\n",
+    "var\"PK\" = 1.1792765990823 ;\n",
+    "var\"PX‡X\" = 111.310479273694 ;\n",
+    "var\"PY‡Y\" = 50.0000000039924 ;\n",
+    "var\"PU‡U\" = 150.000000097099 ;\n",
+    "var\"PL†X\" = 53.1280714406104 ;\n",
+    "var\"PK†X\" = 48.2982467638607 ;\n",
+    "var\"PL†Y\" = 21.177057057939 ;\n",
+    "var\"PK†Y\" = 28.8778050837489 ;\n",
+    "var\"PX†U\" = 103.515616409909 ;\n",
+    "var\"PY†U\" = 46.6614531888854 ;\n",
+    "var\" RA\" = 176.891489749144 ;\n",
+    "var\"PUρRA\" = 166.978316299905 ;\n",
+    "var\"diff\" = 10;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " Compensated Demand\n"
    ]
   },
@@ -413,13 +629,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.43135663325791285"
+       "1.2274824001679008e-7"
       ]
      },
      "metadata": {},
@@ -439,13 +655,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.43135663325791285"
+       "-1.1251221110342158e-7"
       ]
      },
      "metadata": {},
@@ -465,13 +681,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "6.066287738804022e-8"
       ]
      },
      "metadata": {},
@@ -491,13 +707,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.2029452989281708e-9"
+       "-5.3411014278026414e-8"
       ]
      },
      "metadata": {},
@@ -517,13 +733,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.97870222615893e-10"
+       "3.556215119715489e-6"
       ]
      },
      "metadata": {},
@@ -543,13 +759,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3.709459406309179e-10"
+       "6.644725417004338e-6"
       ]
      },
      "metadata": {},
@@ -576,13 +792,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-9.947598300641403e-13"
+       "-10.00000000096793"
       ]
      },
      "metadata": {},
@@ -602,13 +818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.1013412404281553e-12"
+       "1.8045653860099264e-9"
       ]
      },
      "metadata": {},
@@ -628,13 +844,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6.480149750132114e-12"
+       "1.0559849698665857e-5"
       ]
      },
      "metadata": {},
@@ -654,13 +870,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2973097796020738e-7"
+       "4.113086646384545e-6"
       ]
      },
      "metadata": {},
@@ -669,8 +885,8 @@
    ],
    "source": [
     "150.0 * (\n",
-    "    150\n",
-    "    # 157 \n",
+    "    # 165\n",
+    "    157 \n",
     "# var\"RA\"\n",
     " / 150.0) * (1.0 / var\"PU\") - var\"PUρRA\""
    ]
@@ -684,13 +900,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.6345503556512995e-10"
+       "8.619458924385981e-8"
       ]
      },
      "metadata": {},
@@ -703,13 +919,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1315393066979595e-10"
+       "2.0499714992183726e-7"
       ]
      },
      "metadata": {},
@@ -722,13 +938,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.4724223496596096e-9"
+       "1.003347739469973e-5"
       ]
      },
      "metadata": {},
@@ -748,13 +964,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.310152235120768e-11"
+       "-1.361217698558903e-7"
       ]
      },
      "metadata": {},
@@ -763,21 +979,21 @@
    ],
    "source": [
     "(0.0 + 70.0 * \n",
-    "# 1.1\n",
-    "1.0\n",
+    "1.1\n",
+    "# 1.0\n",
     "# var\"endow\"\n",
     ") - (0.0 + var\"X\" * var\"PL†X\" + var\"Y\" * var\"PL†Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.028013230097713e-10"
+       "-1.355891185994551e-7"
       ]
      },
      "metadata": {},
@@ -790,13 +1006,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-8.944311957748141e-11"
+       "4.500000017060302e-6"
       ]
      },
      "metadata": {},
@@ -809,13 +1025,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3134382470525452e-10"
+       "-1.2856120434889817e-7"
       ]
      },
      "metadata": {},
@@ -828,13 +1044,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.418954505235888e-11"
+       "-1.2448695017042155e-5"
       ]
      },
      "metadata": {},
@@ -854,41 +1070,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching *(::Float64, ::MPSGE.CommodityRef)\nClosest candidates are:\n  *(::Any, ::Any, !Matched::Any, !Matched::Any...) at operators.jl:591\n  *(::T, !Matched::T) where T<:Union{Float16, Float32, Float64} at float.jl:385\n  *(::Union{Float16, Float32, Float64}, !Matched::BigFloat) at mpfr.jl:414\n  ...",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching *(::Float64, ::MPSGE.CommodityRef)\n",
-      "Closest candidates are:\n",
-      "  *(::Any, ::Any, !Matched::Any, !Matched::Any...) at operators.jl:591\n",
-      "  *(::T, !Matched::T) where T<:Union{Float16, Float32, Float64} at float.jl:385\n",
-      "  *(::Union{Float16, Float32, Float64}, !Matched::BigFloat) at mpfr.jl:414\n",
-      "  ...\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\Eli\\.julia\\dev\\MPSGE\\examples\\NewParamTest.ipynb:1"
-     ]
+     "data": {
+      "text/plain": [
+       "1.500000053056283e-7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "((70.0 *\n",
-    "1.0\n",
-    "# 1.1 \n",
+    "# 1.0\n",
+    "1.1 \n",
     "# var\"endow\"\n",
     ") * var\"PL\" + 80.0 * var\"PK\") - \n",
-    "# 157\n",
-    "150\n",
+    "157\n",
+    "# 165\n",
     "# var\"RA\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +1127,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.015000\n",
+      "Total Time. . . . . . . 0.031000\n",
       "Residual. . . . . . . . 1.621590e-08\n",
       "Postsolved residual: 1.6216e-08\n"
      ]
@@ -976,7 +1184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.1",
+   "display_name": "Julia 1.8.3",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -984,7 +1192,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.1"
+   "version": "1.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
