--- a/examples/InputDiffParamTest.ipynb
+++ b/examples/InputDiffParamTest.ipynb
@@ -11,44 +11,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PL†A: 40.0\n",
-      "PK†A: 60.0"
+      "PL†A: 40.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "PL†B: 60.0\n",
-      "PK†B"
+      "PK†A: 60.0\n",
+      "PL†B: 60.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ": 40.0\n"
+      "PK†B: 40.0\n",
+      "PX†W: "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PX†W: 100.0 + 0.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "100.0 + 0.0\n",
       "PY†W: 100.0"
      ]
     },
@@ -57,21 +50,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Reading options file C:\\Users\\Eli\\AppData\\Local\\Temp\\jl_1A.tmp\n",
-      " > cumulative_iteration_limit 0\n",
-      "Read of options file complete.\n",
-      "\n",
-      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
-      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
-      "\n",
-      "Major Iteration Log\n",
-      "major minor  func  grad  residual    step  type prox    inorm  (label)\n"
+      "Out: s.elas1.5 * 1.0PX‡A: 80.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Out: s.elas1.5 * 1.0PY‡A: 20.0\n",
+      "Out: s.elas2.0 * 1.0PX‡B: 20.0\n",
+      "Out: s.elas2.0 * 1.0PY‡B: 80.0"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Out: s.elas0.5 * 1.0PW‡W: 200.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading options file C:\\Users\\Eli\\AppData\\Local\\Temp\\jl_38C6.tmp\n",
+      " > cumulative_iteration_limit 0\n",
+      "Read of options file complete.\n",
+      "\n",
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Major Iteration Log\n",
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
       "    0     0     1     1 0.0000e+00           I 0.0e+00 0.0e+00 (F_A)\n",
       "\n",
       "Major Iterations. . . . 0\n",
@@ -82,17 +99,17 @@
       "Function Evaluations. . 1\n",
       "Gradient Evaluations. . 1\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.062000\n",
-      "Residual. . . . . . . . 0.000000e+00\n",
-      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
-      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
-      "Preprocessed size   : 19\n"
+      "Total Time. . . . . . . 0.094000\n",
+      "Residual. . . . . . . . 0.000000e+00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
+      "Preprocessed size   : 19\n",
       "\n",
       "Crash Log\n",
       "major  func  diff  size  residual    step       prox   (label)\n",
@@ -103,26 +120,14 @@
       "    0     0     1     1 0.0000e+00           I 0.0e+00 0.0e+00 (F_A)\n",
       "\n",
       "Major Iterations. . . . 0\n",
-      "Minor Iterations. . . . 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Minor Iterations. . . . 0\n",
       "Restarts. . . . . . . . 0\n",
       "Crash Iterations. . . . 0\n",
       "Gradient Steps. . . . . 0\n",
       "Function Evaluations. . 1\n",
-      "Gradient Evaluations. . 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Gradient Evaluations. . 1\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.125000\n",
+      "Total Time. . . . . . . 0.015000\n",
       "Residual. . . . . . . . 0.000000e+00\n",
       "Postsolved residual: 0.0000e+00\n"
      ]
@@ -172,7 +177,7 @@
     "# @parameter(m, sub_elas_a, 1.)\n",
     "# @parameter(m, sub_elas_b, 1.)\n",
     "# @parameter(m, sub_elas_w, 1.)\n",
-    "@parameter(m, var_var_var_var\"t_elas_a\"\"\"\", 0.0)\n",
+    "@parameter(m, t_elas_a, 0.0)\n",
     "@parameter(m, t_elas_b, 0.0)\n",
     "\n",
     "@sector(m, A)\n",
@@ -193,7 +198,7 @@
     "@production(m, B, :($t_elas_b*1.), :($sub_elas_b*1.), [Output(PX, 20), Output(PY, 80)], [Input(PL, 60), Input(PK, 40)])\n",
     "# @production(m, B, :($t_elas_b*1.), :($sub_elas_b*1.), [Output(PX, :(20+$diff)), Output(PY, 80)], [Input(PL, 60), Input(PK, 40)])\n",
     "@production(m, W, 0, :($sub_elas_w*1.), [Output(PW, 200.0)],[Input(PX, :(100.0+$diff)), Input(PY, 100.0)])\n",
-    "# @production(m, W, 0, :($sub_elas_w*1.), [Output(PW, 200.0)], [Input(PX, 100.0), Input(PY, 100.0)])\n",
+    "# @production(m, W, 0, :($var\"var\"var\"var\"sub_elas_w\"\"\"\"*1.), [Output(PW, 200.0)], [Input(PX, 100.0), Input(PY, 100.0)])\n",
     "# @production(m, W, 0.,1, [Output(PW, :(200.0+$diff))], [Input(PX, :(100.0+$diff)), Input(PY, 100.0)])\n",
     "\n",
     "@demand(m, CONS, 1., [Demand(PW, 200.)], [Endowment(PL, 100.0), Endowment(PK, 100.0)])\n",
@@ -208,22 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "θWiPX: 0.5=>0.55\n",
       "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
       "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
-      "Preprocessed size   : 19\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Preprocessed size   : 19\n",
       "\n",
       "Crash Log\n",
       "major  func  diff  size  residual    step       prox   (label)\n",
@@ -232,13 +232,7 @@
       "pn_search terminated: no basis change.\n",
       "\n",
       "Major Iteration Log\n",
-      "major minor  func  grad  residual    step  type prox    inorm  (label)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
       "    0     0     2     2 8.3461e-02           I 0.0e+00 4.6e-02 (F_PK†B)\n",
       "    1     1     3     3 1.7757e-05  1.0e+00 SO 0.0e+00 1.4e-05 (F_PK†B)\n",
       "    2     1     4     4 1.4020e-12  1.0e+00 SO 0.0e+00 8.4e-13 (F_B)\n",
@@ -246,24 +240,12 @@
       "Major Iterations. . . . 2\n",
       "Minor Iterations. . . . 2\n",
       "Restarts. . . . . . . . 0\n",
-      "Crash Iterations. . . . 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Crash Iterations. . . . 1\n",
       "Gradient Steps. . . . . 0\n",
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.172000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Total Time. . . . . . . 0.016000\n",
       "Residual. . . . . . . . 1.402008e-12\n",
       "Postsolved residual: 1.4020e-12\n"
      ]
@@ -318,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -521,13 +503,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "109.83787251928246"
+       "107.19078780407948"
       ]
      },
      "metadata": {},
@@ -535,93 +517,180 @@
     }
    ],
    "source": [
-    "\"input.quantity\"\n",
-    "(100.0 + var\"diff\") * (\n",
-    "\"y_over_y_bar\"\n",
-    "  \"y: theta\"\n",
-    "0.52380952381 \n",
-    "    # 0.5\n",
-    "    \"y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
+    "# \"input.quantity\"\n",
+    "(100.0 + var\"diff\") *\n",
+    " (0.55\n",
+    "# \"y_over_y_bar\"\n",
+    "  # \"y: theta\"\n",
+    "# (0.52380952381 \n",
+    "    # (0.5\n",
+    "    # \"y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
     " * ((var\"PX†W\"\n",
     "# + var\"diff\"\n",
     ") \n",
-    "  \"y:i.quantity\"\n",
+    "  # \"y:i.quantity\"\n",
     "/ (100.0 \n",
     "+ var\"diff\"\n",
     ")) \n",
-    "  \"y: ^ρ\" \n",
+    "  # \"y: ^ρ\" \n",
     "^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) +\n",
-    "  \"y: theta\" \n",
-    "0.47619047619 \n",
-    "# 0.5\n",
-    "  \"y:get_comp_demand_name\"\n",
+    "  # \"y: theta\" \n",
+    "# 0.47619047619 \n",
+    "0.5\n",
+    "  # \"y:get_comp_demand_name\"\n",
     " * ((var\"PY†W\"\n",
     "# + var\"diff\"\n",
-    "  \"y:i.quantity\"\n",
+    "  # \"y:i.quantity\"\n",
     ") / (100.0\n",
     "# + var\"diff\"\n",
     "))\n",
-    "  \"y: ^ρ\" \n",
+    "  # \"y: ^ρ\" \n",
     "^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))\n",
-    "  \"y: ^1/ρ\"\n",
-    ") ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) \n",
-    "\"create_cost_expr\"\n",
-    "* ((((\n",
-    "  \"cost: theta\"\n",
+    "  # \"y: ^1/ρ\"\n",
+    ") ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) *\n",
+    "# \"create_cost_expr\"\n",
+    "((((\n",
+    "  # \"cost: theta\"\n",
     "  # 0.5\n",
-    "  0.52380952381 \n",
-    "  \"cost: get_jump_variable_for_commodity(jm, input.commodity)\"\n",
+    "  0.55\n",
+    "  # 0.52380952381 \n",
+    "  # \"cost: get_jump_variable_for_commodity(jm, input.commodity)\"\n",
     " * (var\"PX\" \n",
-    "  \"cost: benchmark(input.commod)\"\n",
+    "  # \"cost: benchmark(input.commod)\"\n",
     " / 1.0) \n",
-    "  \"cost: 1-elas\"\n",
+    "  # \"cost: 1-elas\"\n",
     " ^ (1.0 - var\"sub_elas_w\" * 1.0) \n",
     "+ \n",
-    "  \"cost: theta\"\n",
-    "# 0.5\n",
-    "0.47619047619\n",
-    "  \"cost: get_jump_variable_for_commodity(jm, input.commodity)\"\n",
+    "  # \"cost: theta\"\n",
+    "0.5\n",
+    "# 0.47619047619\n",
+    "  # \"cost: get_jump_variable_for_commodity(jm, input.commodity)\"\n",
     " * (var\"PY\" \n",
-    "  \"cost: benchmark(input.commod)\"\n",
+    "  # \"cost: benchmark(input.commod)\"\n",
     "/ 1.0) \n",
-    "  \"cost: 1-elas\"\n",
+    "  # \"cost: 1-elas\"\n",
     "^ (1.0 - var\"sub_elas_w\" * 1.0)) \n",
-    "  \"cost:  1/1-elas\"\n",
+    "  # \"cost:  1/1-elas\"\n",
     "^ (1.0 / (1.0 - var\"sub_elas_w\" * 1.0)) \n",
     "* (\n",
-    "  \"cost->y_over_y_bar\"\n",
-    "  \"cost->y: theta\"\n",
-    "0.52380952381 \n",
+    "  # \"cost->y_over_y_bar\"\n",
+    "  # \"cost->y: theta\"\n",
+    "# 0.52380952381 \n",
     "    # 0.5\n",
-    "    \"cost->y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
+    "    0.55\n",
+    "    # \"cost->y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
     " * ((var\"PX†W\"\n",
     "# + var\"diff\"\n",
-    "  \"cost->y:i.quantity\"\n",
+    "  # \"cost->y:i.quantity\"\n",
     ") / (100.0\n",
     " + var\"diff\"\n",
     " )) \n",
-    "   \"cost->y: ^ρ\"\n",
+    "  #  \"cost->y: ^ρ\"\n",
     " ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + \n",
-    "   \"cost->y: theta\"\n",
-    "0.47619047619\n",
-    "#  0.5\n",
-    "  \"cost->y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
+    "  #  \"cost->y: theta\"\n",
+    "# 0.47619047619\n",
+    " 0.5\n",
+    "  # \"cost->y:get_comp_demand_name\" #should this ALWAYS be DEMAND???\n",
     "  * ((var\"PY†W\"\n",
     " # + var\"diff\"\n",
-    "  \"cost->y:i.quantity\"\n",
+    "  # \"cost->y:i.quantity\"\n",
     " ) / (100.0\n",
     "# + var\"diff\"\n",
     " )) \n",
-    "  \"cost->y: ^ρ\"\n",
+    "  # \"cost->y: ^ρ\"\n",
     " ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) \n",
-    "    \"cost->y: ^1/ρ\"\n",
+    "    # \"cost->y: ^1/ρ\"\n",
     " ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)))) \n",
-    " \"get_commodity_benchmark\"\n",
+    "#  \"get_commodity_benchmark\"\n",
     " * 1.0) \n",
-    " \"get_jump_variable_for_commodity\"\n",
-    " / var\"PX\") \n",
-    " \"s.elas\"\n",
-    " ^ (var\"sub_elas_w\" * 1.0) #- var\"PX†W\""
+    "#  \"get_jump_variable_for_commodity\"\n",
+    " / var\"PX\") ^\n",
+    "#  \"s.elas\"\n",
+    " (var\"sub_elas_w\" * 1.0) #- var\"PX†W\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With 0.5 for both share params: with MPSGE.jl values set, 109.82976879429108 as matches the results. With GAMS values set, 109.84192386634355 <br>\n",
+    "With 0.55 for what I believe to be ΘWiPX: with MPSGE.jl values set, 107.17892415325743. With the GAMS values set, 107.19078780407948<br>\n",
+    "With ΘWiPX=0.52380952381 and ΘWiPY=0.47619047619: with MPSGE.jl values set, 109.82571589469462. With the GAMS values set <b><u>109.83787251928246</u></b> as matches the GAMS result!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004023866343544569"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "(100.0 + var\"diff\") * (0.5  * (var\"PX†W\"   / (100.0 + var\"diff\"  ))    ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) +    0.5    * ((var\"PY†W\"  ) / (100.0    ))   ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))   ) ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)))   * \n",
+    "((((0.5\n",
+    " * (var\"PX\" / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0) + 0.5 * (var\"PY\" / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0)) ^ (1.0 / (1.0 - var\"sub_elas_w\" * 1.0)) * (0.5 * (var\"PX†W\" / (100.0 + var\"diff\")) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + 0.5 * (var\"PY†W\" / 100.0) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)))) * 1.0) / var\"PX\") ^ (var\"sub_elas_w\" * 1.0) - var\"PX†W\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "109.8379"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var\"PX†W\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  ┴  PX†W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004023866343544569"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "(100.0 + var\"diff\") *\n",
+    " (0.5 * (var\"PX†W\" / (100.0 + var\"diff\")) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + 0.5 * (var\"PY†W\" / 100.0) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) ^ (1.0 / ((sub_elas_w * 1.0 - 1.0) / (sub_elas_w * 1.0))) * \n",
+    "((((0.5 * (PX / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0) + 0.5 * (var\"PY\" / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0)) ^ (1.0 / (1.0 - var\"sub_elas_w\" * 1.0)) * (0.5 * (var\"PX†W\" / (100.0 + var\"diff\")) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + 0.5 * (var\"PY†W\" / 100.0) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)))) * 1.0) / PX) ^ (var\"sub_elas_w\" * 1.0) - var\"PX†W\""
    ]
   },
   {
@@ -634,13 +703,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100.16262605272354"
+       "105.18239922267419"
       ]
      },
      "metadata": {},
@@ -649,31 +718,34 @@
    ],
    "source": [
     "100.0 * (\n",
-    "  0.52380952381 \n",
-    "  # 0.5\n",
+    "  # 0.52380952381 # The value suggested by the ipynb 110/210\n",
+    "  # .55 # The value as updated now (1/30/23), 110/200\n",
+    "  0.5  #unchanged from diff = 0\n",
     "   * ((var\"PX†W\"\n",
     "#  + var\"diff\"\n",
     ")/ (100.0\n",
     " + var\"diff\"\n",
     " )) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + \n",
-    "#  0.5\n",
-    " 0.47619047619\n",
+    " 0.5 #unchanged\n",
+    "#  0.47619047619 # The value suggested by the ipynb 100/210\n",
     "  * (var\"PY†W\" / 100.0) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) * ((((\n",
-    "    0.52380952381 \n",
-    "    # 0.5\n",
+    "    # 0.52380952381 # The value suggested by the ipynb 110/210 \n",
+    "    0.55 # The value as updated now (1/30/23), 110/200\n",
+    "    # 0.5  #unchanged from diff = 0\n",
     "     * (var\"PX\" / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0) + \n",
-    "  # 0.5\n",
-    "  0.47619047619\n",
+    "  0.5 #unchanged\n",
+    "  # 0.47619047619 # The value suggested by the ipynb 100/210\n",
     "  * (var\"PY\" / 1.0) ^ (1.0 - var\"sub_elas_w\" * 1.0)) ^ (1.0 / (1.0 - var\"sub_elas_w\" * 1.0)) *(\n",
-    "  # 0.5\n",
-    "  0.52380952381 \n",
+    "  # 0.55 # The value as updated now (1/30/23), 110/200\n",
+    "  0.5\n",
+    "  # 0.52380952381 # The value suggested by the ipynb 110/210 \n",
     "  * ((var\"PX†W\"\n",
     "# + var\"diff\"\n",
     ")/ (100.0\n",
     "  + var\"diff\"\n",
     "  )) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)) + \n",
-    "  # 0.5\n",
-    "  0.47619047619\n",
+    "  0.5  #unchanged\n",
+    "  # 0.47619047619 # The value suggested by the ipynb 100/210 \n",
     "   * (var\"PY†W\" / 100.0) ^ ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0))) ^ (1.0 / ((var\"sub_elas_w\" * 1.0 - 1.0) / (var\"sub_elas_w\" * 1.0)))) * 1.0) / var\"PY\") ^ (var\"sub_elas_w\" * 1.0) #- var\"PY†W\""
    ]
   },
@@ -2276,15 +2348,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.3"
+   "version": "1.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
