Testing tables in documentation

--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -1,1 +1,9 @@
-# Model M22: Closed Economy 2X2 with Intermediate Inputs and Nesting
+# Closed 2``\times2`` Economy with Intermediate Inputs and Nesting
+
+|  Markets  |    X   |    Y   |    W    |       CONS   |
+|-----------|--------|--------|---------|------------- |      
+|PX         |  120   | -20    |  -100   |              |
+|PY         |  -20   |  120   |  -100   |              |
+|PW         |        |        |   200   | -200         |
+|PL         |  -40   |  -60   |         |  100         |
+|PK         |  -60   |  -40   |         |  100         |      
