Documentation and examples

--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -1,5 +1,7 @@
 # Closed ``2\times2`` Economy with Intermediate Inputs and Nesting
 
+This model is available in a notebook file [here](https://github.com/mitchphillipson/MPSGE_MP.jl/blob/main/examples/M22.ipynb).
+
 Consider the following social accounting matrix. 
 
 |  Markets  |    X   |    Y   |    W    |       CONS   |
