Updating example with new macro styles

--- a/examples/WiNDC_national_model.ipynb
+++ b/examples/WiNDC_national_model.ipynb
@@ -87,23 +87,23 @@
     "\n",
     "\n",
     "@parameters(WiNnat, begin\n",
-    "    ta, ta_0[yr,J], (index = [J],)\n",
-    "    ty, ty_0[yr,J], (index = [J],)\n",
-    "    tm, tm_0[yr,J], (index = [J],)\n",
+    "    ta[J], ta_0[yr,J]\n",
+    "    ty[J], ty_0[yr,J]\n",
+    "    tm[J], tm_0[yr,J]\n",
     "end)\n",
     "\n",
     "@sectors(WiNnat,begin\n",
-    "    Y, (index = [J], description = \"Sectoral Production\")\n",
-    "    A, (index = [I], description = \"Armington Supply\")\n",
-    "    MS, (index = [M],description = \"Margin Supply\")\n",
+    "    Y[J],  (description = \"Sectoral Production\",)\n",
+    "    A[I],  (description = \"Armington Supply\",)\n",
+    "    MS[M], (description = \"Margin Supply\",)\n",
     "end)\n",
     "\n",
     "@commodities(WiNnat,begin\n",
-    "    PA, (index = [I],  description = \"Armington Price\")\n",
-    "    PY, (index = [J],  description = \"Supply\")\n",
-    "    PVA, (index = [VA],description = \"Value-added\")\n",
-    "    PM, (index = [M],  description = \"Foreign Exachange\")\n",
-    "    PFX\n",
+    "    PA[I],   (description = \"Armington Price\",)\n",
+    "    PY[J],   (description = \"Supply\",)\n",
+    "    PVA[VA], (description = \"Value-added\",)\n",
+    "    PM[M],   (description = \"Margin Price\",)\n",
+    "    PFX,     (description = \"Foreign Exachange\",)\n",
     "end)\n",
     "\n",
     "@consumer(WiNnat, RA, description = \"Representative Agent\")\n",
