--- a/examples/WiNDC_national_model.ipynb
+++ b/examples/WiNDC_national_model.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using MPSGE_MP\n",
+    "using MPSGE\n",
     "\n",
     "using CSV, DataFrames, JLD2\n",
     "\n",
