--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -1,6 +1,6 @@
 # Closed ``2\times2`` Economy with Intermediate Inputs and Nesting
 
-This model is available in a notebook file [here](https://github.com/mitchphillipson/MPSGE.jl/blob/main/examples/M22.ipynb).
+This model is available in a notebook file [here](https://github.com/julia-mpsge/MPSGE.jl/blob/main/examples/M22.ipynb).
 
 Consider the following social accounting matrix. 
 
