reconcile package name references (#151)
* reconcile package name references

* Update CI pkg name

* url updates

--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -1,6 +1,6 @@
 # Closed ``2\times2`` Economy with Intermediate Inputs and Nesting
 
-This model is available in a notebook file [here](https://github.com/mitchphillipson/MPSGE_MP.jl/blob/main/examples/M22.ipynb).
+This model is available in a notebook file [here](https://github.com/julia-mpsge/MPSGE.jl/blob/main/examples/M22.ipynb).
 
 Consider the following social accounting matrix. 
 
@@ -18,9 +18,9 @@ different groups of inputs.
 
 ## Model Initialization
 
-First we import `MPSGE_MP` and initialize the model.
+First we import `MPSGE` and initialize the model.
 ```
-using MPSGE_MP
+using MPSGE
 
 M = MPSGEModel()
 ```
