Fix typo in M22 example

--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -93,7 +93,7 @@ which sits under `s`, this is denoted with `va => s` and the `= 1` sets
 the elasticity to 1. One thing to notice is that `σ` is a previously defined
 parameter. In general, any quantity can be either a number or parameter.
 
-Finally, [`@inputs`](@ref) and [`@outputs](@ref). These must be wrapped in the `begin .. end` syntax.
+Finally, [`@input`](@ref) and [`@output`](@ref). These must be wrapped in the `begin .. end` syntax.
 The syntax of building an output is the same as an input, so we'll describe an 
 output. The required information is a commodity, quantity, and nest. We have
 used Julia macro syntax to suppress parentheses and commas, but you could 
