--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -2,7 +2,7 @@
 
 This model is available in a notebook file [here](https://github.com/julia-mpsge/MPSGE.jl/blob/main/examples/M22.ipynb).
 
-Consider the following social accounting matrix. 
+Consider the following social accounting matrix (SAM). 
 
 |  Markets  |    X   |    Y   |    W    |       CONS   |
 |:---------:|:------:|:------:|:-------:|:-----------: |      
@@ -15,6 +15,14 @@ Consider the following social accounting matrix.
 We are going to use this matrix to construct a simple CES nesting structure that
 permits the modeler to specify different elasticities of substitution between
 different groups of inputs.
+
+
+While the SAM contains the data to build the model, it doesn't specify any structure. To 
+do this we use a tree diagram. For this model we will have four trees: `X`, `Y`, `W`, `CONS`.
+
+![Specific Model Description](../../images/m22_model.png)
+
+
 
 ## Model Initialization
 
