--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -22,7 +22,19 @@ do this we use a tree diagram. For this model we will have four trees: `X`, `Y`,
 
 ![Specific Model Description](../../images/m22_model.png)
 
+These should be self explanatory, but we'll detail the `X` tree. First, `X` has an associated 
+elasticity of substitution ``s=\sigma`` and elasticity of substitution `t=0`. There is only one
+output, `PX` with quantity 120. `PY`, `PL`, and `PK` are inputs, but we are nesting `PL` and 
+`PK` under the _shadow sector_ `va`, this is also referred to as a nest. The `va=1` specifies 
+the elasticity of substitution on the 
+inputs of `va`. Finally, we are going to impose a tax on `PL` and `PK`, taxes require a consumer
+in this case there is only one, `CONS`. 
 
+The `CONS` tree is similar, consumers have demands and endowments. In this case, `CONS` demands
+200 units of `PW` and endows both `PL` and `PK` 100 units.
+
+Using this type of diagram trivializes the implementation of a model into MPSGE. The language of
+MPSGE is directly tied to these trees, as we will see.
 
 ## Model Initialization
 
