--- a/docs/src/Tutorials/intermediate_examples/M22.md
+++ b/docs/src/Tutorials/intermediate_examples/M22.md
@@ -128,7 +128,8 @@ Each consumer will have a corresponding demand block. Here is the demand
 block for `CONS`
 ```
 @demand(M, CONS, begin
-    @final_demand(PW, 200)    @endowment(PL, 100)
+    @final_demand(PW, 200)    
+    @endowment(PL, 100)
     @endowment(PK,100)
 end)
 ```
